--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.tngtech.junit.dataprovider</groupId>
+            <artifactId>junit4-dataprovider</artifactId>
+            <version>2.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
